# sidplayfp-sys

./: Cargo.toml  README.md  build.rs  sidplayfp_c.cpp  sidplayfp_c.h
csrc/: player.h
csrc/sidplayfp/: sidplayfp.cpp  sidplayfp.h
src/: lib.rs
